--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: hackathontv_production
-  username: giulia
+  username: hackathontv
   password: <%= ENV['HACKATHONTV_DATABASE_PASSWORD'] %>
